fix: white space between about cells in certain resolutions

--- a/website-challenge-2-sunnyside-landing/app/scss/sections/_about.scss
+++ b/website-challenge-2-sunnyside-landing/app/scss/sections/_about.scss
@@ -17,7 +17,7 @@
 	padding: 7.5vw;
 
 	@include m.breakpoint-down("about-padding") {
-		padding: 3.5vw;
+		padding: 2.9vw;
 	}
 	@include m.breakpoint-down("about") {
 		align-items: center;
